# WoffDecoderLib

./: Cargo.toml  LICENSE  README.md  build_android.sh  cargo-config.toml  prepare_workspace.sh
include/: WoffDecoder.h
src/: lib.rs  main.rs  structures.rs  utils.rs
