[package]
name = "woff-decoder"
version = "1.0.5"
authors = ["Alex Khomich <alexkh90@gmail.com>"]
edition = "2021"
readme = "README.md"
keywords = ["woff"]
license = "Apache-2.0"
repository = "https://github.com/AlexKhomich/WoffDecoderLib.git"

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.22"
bytebuffer = "0.2.1"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"

[lib]
name = "woffdecoder"
crate-type = ["staticlib", "cdylib", "dylib", "rlib"]